# LearnFFMpeg

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFPlayerJNI.cpp  native-lib.cc
app/src/main/cpp/audio/: FFResample.cpp  FFResample.h  IAudioPlayer.cpp  IAudioPlayer.h  IResample.cpp  IResample.h  SLAudioPlayer.cpp  SLAudioPlayer.h
app/src/main/cpp/decoder/: FFDecoder.cpp  FFDecoder.h  FFParameter.cpp  FFParameter.h  IDecoder.cpp  IDecoder.h
app/src/main/cpp/demuxer/: FFData.cpp  FFData.h  FFDemuxer.cpp  FFDemuxer.h  IDemuxer.cpp  IDemuxer.h
app/src/main/cpp/include/libavcodec/: avcodec.h  xvmc.h
app/src/main/cpp/include/libavfilter/: avfilter.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: avstring.h  downmix_info.h  ffversion.h  hdr_dynamic_metadata.h  intreadwrite.h  opt.h  pixfmt.h  spherical.h  stereo3d.h
app/src/main/cpp/util/Log/: LogUtil.h
app/src/main/cpp/util/observer/: IObserver.cpp  IObserver.h
app/src/main/cpp/util/thread/: FFThread.cpp  FFThread.h
app/src/main/cpp/video/EGL/: FFEGL.cpp  FFEGL.h
app/src/main/cpp/video/shader/: FFShader.cpp  FFShader.h
app/src/main/cpp/video/texture/: ITexture.cpp  ITexture.h
app/src/main/cpp/video/view/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
